HHH-5781 - Refactor code in org.hibernate.jdbc to spi/internal and remove obsolete code